Quick logic impl for broadcasting (advertising).

--- a/src/app/partials/app.jade
+++ b/src/app/partials/app.jade
@@ -17,3 +17,7 @@
       
       button.btn.btn-default(type='button', ng-click='onStopClick()') Stop
       button.btn.btn-primary(type='button', ng-click='onBroadcastClick()') Broadcast
+
+    br
+    pre
+      | {{ status | json }}
