--- a/src/app/styles/main.styl
+++ b/src/app/styles/main.styl
@@ -1,3 +1,18 @@
 // Dependencies
 
 @import '../../../bower_components/bootstrap-stylus/bootstrap/index'
+
+.app
+  form.region
+    margin-top 10px
+  
+  .log
+    height 40vh
+    overflow-y scroll
+    span
+      font-size 1rem
+      border-top 1px solid #ddd
+      display block
+      padding-bottom 2px
+      margin-bottom 2px
+      width 100%
