--- a/src/index.jade
+++ b/src/index.jade
@@ -1,15 +1,15 @@
 doctype html
-html(lang='en', ng-app='myBeacon')
+html(lang='en')
   head
     title MyBeacon
     meta(charset='utf-8')
     meta(content='IE=edge,chrome=1', http-equiv='X-UA-Compatible')
     meta(content='yes', name='apple-mobile-web-app-capable')
-    meta(content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimal-ui', name='viewport')
+    meta(content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0', name='viewport')
     meta(content='yes', name='apple-mobile-web-app-status-bar-style')
     meta(content='', name='description')
     link(href='http://fonts.googleapis.com/css?family=Lato:100,200,300,400,700,900', rel='stylesheet', type='text/css')
-    link(href='//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css', rel='stylesheet', type='text/css')
+    link(href='http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css', rel='stylesheet', type='text/css')
     link(href='assets/css/main.css', rel='stylesheet', type='text/css')
   body(ng-controller='BeaconController')
     main.container
@@ -21,19 +21,30 @@ html(lang='en', ng-app='myBeacon')
 
     if liveReload
       script(src='//localhost:#{liveReloadPort}/livereload.js')
+    script.
+      _bootstrapAngular = function () {
+        deferredBootstrapper.bootstrap({
+          element: document.body,
+          module: 'myBeacon',
+          resolve: {}
+        });
+      }
     if cordova
+      script(src='cordova.js')
       script.
-        var cordova = {
+        var cordovaSetup = {
           initialize: function() {
-              this.bindEvents();
+            this.bindEvents();
           },
           bindEvents: function() {
-              document.addEventListener('deviceready', this.onDeviceReady, true);
+            document.addEventListener('deviceready', this.onDeviceReady, true);
           },
-
           onDeviceReady: function() {
-              cordova.receivedEvent('deviceready');
+            _bootstrapAngular();            
           }
         };
 
-        cordova.initialize();
+        cordovaSetup.initialize();
+    else
+      script.
+        _bootstrapAngular();
